<resources>
    <string name="app_name">Gather</string>
    <string name="quote">We do not remember days, we remember moments.</string>
    <string name="quote_author">- Cesare Pavese</string>
    <string name="title_activity_login">Sign in</string>
    <string name="greeting_default">Welcome!</string>
    <string name="greeting_name">Hello </string>

    <!-- Strings for the shared preferences. -->
    <string name="LOGIN_PREFS">tcss450.uw.edu.project18.PREFS</string>
    <string name="FILE_AUTH">tcss450.uw.edu.project18.fileprovider</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USER">email</string>
    <string name="PWD">pwd</string>
    <string name="BDAY">bday</string>
    <string name="UID">uid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for the edit profile activity. -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_email">Enter Email</string>
    <string name="profile_day">Day</string>
    <string name="profile_month">Month</string>
    <string name="profile_year">Year</string>
    <string name="profile_date">Choose your birthday</string>
    <string name="profile_password">Enter Password</string>
    <string name="profile_rules">"Must be longer than 7 characters, contain at least one number and one capital letter."</string>
    <string name="profile_confirm">Confirm Password</string>
    <string name="profile_submit">Submit</string>
    <string name="profile_cancel">Cancel</string>

    <!-- Edit Event fragment. -->
    <string name="edit_event_hint_title">Enter a title</string>
    <string name="edit_event_hint_comment">Say something about your picture.</string>
    <string name="edit_event_date_button">Edit Date</string>
    <string name="edit_event_cancel_button">Cancel</string>
    <string name="edit_event_submit_button">Save</string>
    <string name="edit_event_hint_tags">Tag your picture! Put commas, between, tags</string>

    <string name="title_activity_main">Gather</string>
    <string name="nav_subtext">Welcome!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Toolbar menu items. -->
    <string name="toolbar_camera">Take a picture!</string>
    <string name="action_search">Filter by tag…</string>

    <!-- String for view event -->
    <string name="edit_event_button">Edit</string>
    <string name="delete_event_button">Delete</string>

    <!-- Sidebar labels -->
    <string name="sidebar_camera">Create Event</string>
    <string name="sidebar_share">Share an Event</string>
    <string name="sidebar_profile">Edit Profile</string>

</resources>
